Revision history for Perl module WebService::Rackspace::CloudFiles:

1.03 Sun Jun 00 00:00:00 GMT+2 2011
    - Now using JSON::Any instead of JSON::XS::VersionOneAndTwo.

1.02 Sun Jan 16 14:55:00 GMT+2 2010
    - Authentication location can now be set to either usa or uk (Adam Lelean) 

1.01 Sat Oct 16 15:55:00 GMT+2 2010
    - Added missing File::Stat dependency as it's a required module for testing
    - Fixed content-type tests
    - HEAD requests will now succeed if the response code is a successful status
      code of 2xx (gh-1)

1.00 Sat Jun 03 10:49:00 GMT+2 2010
    - Forked from Net::Mosso::CloudFiles. Mosso changed name to Rackspace over
	  a year ago.	
    - Moved from ExtUtils::MakeMaker to Module::Install

0.44 Sat Jun 03 09:39:02 GMT+2 2010
    - Support for metadata - patch supplied by Jay Kuri, modified and applied by
	  Christiaan Kras - closes RT#48561
    - All tests now pass since RT#58854 for DateTime::Format::HTTP has been
      fixed.

0.43 Sat May 30 17:45:34 BST 2009
    - work with latest Moose

0.42 Fri Mar 27 15:49:48 GMT 2009
    - add Crypt::SSLeay as a dependency as we use SSL for all
      requests
    - update documentation
    - add Pod tests
    - make request, uri methods private

0.41 Tue Mar 17 14:52:50 GMT 2009
    - fix problem with uploading binary data

0.40 Tue Mar 17 11:15:28 GMT 2009
    - Major rewrite to be more like Net::Amazon::S3
    - Use new JSON request for listing objects - adding size, etag,
      content_type and last_modified

0.35 Mon Feb  2 06:10:06 GMT 2009
    - Reauthenticate when the authentication token expires
      (after one hour)
    - Return more than 10,000 objects by issuing multiple calls
      (objects now returns a Data::Stream::Bulk object)
    - Only do 990 keep alive requests per connection
    - Add prefix as an option to objects

0.34 Tue Jan 13 15:37:27 GMT 2009
    - Retry upon errors using LWP::UserAgent::Determined
    - Make all the classes immutable
