@@ -11,8 +11,6 @@ use WebService::Rackspace::CloudFiles;
 
 unless ( $ENV{'CLOUDFILES_EXPENSIVE_TESTS'} ) {
     plan skip_all => 'Testing this module for real costs money.';
-} else {
-    plan tests => 55;
 }
 
 my $cloudfiles = WebService::Rackspace::CloudFiles->new(
@@ -21,8 +19,6 @@ my $cloudfiles = WebService::Rackspace::CloudFiles->new(
     location => $ENV{'CLOUDFILES_LOCATION'},
 );
 isa_ok( $cloudfiles, 'WebService::Rackspace::CloudFiles' );
-
-
 
 my $container = $cloudfiles->create_container( name => 'testing' );
 isa_ok( $container, 'WebService::Rackspace::CloudFiles::Container', 'container' );
@@ -93,6 +89,13 @@ is( $object->size, '11', 'list has right size' );
 is( $object->content_type, 'binary/octet-stream',
     'list has right content type' );
 isa_ok( $object->last_modified, 'DateTime', 'list has a last modified' );
+
+# Testing some CDN features
+$container->cdn_enable;
+ok($container->cdn_uri, 'CDN HTTP URL');
+ok($container->cdn_ssl_uri, 'CDN HTTPS URL');
+ok($one->cdn_url, 'CDN HTTP URL for object');
+ok($one->cdn_ssl_url, 'CDN HTTPS URL for object');
 
 $one->delete;
 throws_ok(
@@ -166,3 +169,5 @@ isa_ok( $object->last_modified, 'DateTime', 'list has a last modified' );
 $another_two->delete;
 
 $container->delete;
+
+done_testing();
