@@ -1,6 +1,9 @@
 Revision history for Perl module WebService::Rackspace::CloudFiles:
 
 1.03 Sun Jun 00 00:00:00 GMT+2 2011
+    - Added basic support for enabling and disabling CDN on containers and
+      added cdn_url and cdn_ssl_url methods to Object to retrieve their public
+      url's
     - Now using JSON::Any instead of JSON::XS::VersionOneAndTwo.
 
 1.02 Sun Jan 16 14:55:00 GMT+2 2010
